feat: updated purchase order strategy and server client for udp